--- a/app/assets/stylesheets/mypage.css.scss
+++ b/app/assets/stylesheets/mypage.css.scss
@@ -75,6 +75,7 @@
   span {
     font-size: 13px;
     word-wrap: break-word;
+    clear: left;
   }
 
   hr {
@@ -216,14 +217,11 @@
       color: #a2a2a2;
     }
   }
-
-  div > .page-ejection {
-    float: right;
+  div .page-ejection {
+    float: right; 
     border: 2px solid #ddd;
     border-radius: 0.3em;
     background-color: white;
-    padding: 0px;
-
     ul {
       list-style: none;
       margin-top: 0px;
@@ -244,13 +242,12 @@
         height: 100%;
         width: auto;
       }
-      .page-next {
-        img {
-          margin-left: 6px;
-        }
+      .page-prev, .page-next {
+        background-color: white;
       }
     }
   }
+  
   .page_info {
     float: right;
     margin: 5px 0px 0px 0px;
@@ -287,6 +284,7 @@ ul.tab {
     text-align: center;
 
     a {
+      height: 100%;
       color: #000;
       display: block;
       padding: 0px 10px 0px;
